# mcmc-estimation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
ag/: __init__.py  model.py  sampler.py
ag/adaptation/: mass_matrix.py  step_size.py
ag/diagnostics/: convergence.py
ag/integrators/: __init__.py  leapfrog.py
ag/kernels/: __init__.py  mclmc.py  nuts.py
ag/transforms/: affine_coupling.py  base.py
agnuts/: __init__.py  sampler.py  types.py
agnuts/adaptation/: __init__.py  mass_matrix.py  step_size.py
agnuts/diagnostics/: convergence.py
agnuts/integrators/: __init__.py  leapfrog.py  utils.py
agnuts/kernels/: __init__.py  base.py  mclmc.py  nuts.py
agnuts/transforms/: __init__.py  score_matching.py
agsampler/: __init__.py  sampler.py  types.py
agsampler/adaptation/: mass_matrix.py  step_size.py
agsampler/diagnostics/: __init__.py  convergence.py
agsampler/integrators/: __init__.py  leapfrog.py
agsampler/kernels/: __init__.py  mclmc.py  nuts.py
agsampler/transforms/: score_matching.py
experiments/: neal_funnel.py
notebooks/: funnel_experiment.ipynb
tests/: test_adaptation.py  test_diagnostics.py  test_integrators.py  test_kernels.py  test_transforms.py
