[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ag"
version = "0.1.0"
description = "Adaptive Geometry sampler: self-improving MCMC via learned reparameterization and fast dynamics"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpy>=1.26.0",
    "arviz>=0.18.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]>=0.4.30"]
flow = ["optax>=0.2.0", "equinox>=0.11.0"]
dev = [
    "pytest>=8.0",
    "pytest-xdist",
    "cmdstanpy>=1.2.0",
    "numpyro>=0.15.0",
    "blackjax>=1.2.0",
    "optax>=0.2.0",
]

[tool.setuptools.packages.find]
include = ["ag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
